Arreglos en LoginController - Estilos - Integracion de Session.java - Modificaciones en el menu principal para le cierre de Session